trying to identify why questions array is not showing instead of html coded questions. Checking if data numbers are correct and have console.logged each section to check in the console. Edited choice-text in the css file and changed padding

--- a/css/game.css
+++ b/css/game.css
@@ -25,3 +25,10 @@ choice-text {
     width: 100%;
 }
 
+.correct {
+    background-color: green;
+}
+
+.incorrect {
+    background-color: red;
+}
